fix: patron sizes and contrast. update: image file name logic. (#244)
fix #237 
fix #238 
fix #239 
fix #240

--- a/docs/.vuepress/theme/styles/download.styl
+++ b/docs/.vuepress/theme/styles/download.styl
@@ -109,7 +109,6 @@
 
         small {
           display: inline-block;
-          font-weight: bold;
           margin-right: 30px;
 
           span {
